fix whitespace caused by animation

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,7 +1,7 @@
 .about.container {
     margin-top: 4rem;
     display: flex;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .about.container img.my_pic {
